// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders a Pocket ECS Codepipeline template 1`] = `
"{
  \\"//\\": {
    \\"metadata\\": {
      \\"version\\": \\"stubbed\\",
      \\"stackName\\": \\"test\\",
      \\"backend\\": \\"local\\"
    }
  },
  \\"data\\": {
    \\"aws_iam_policy_document\\": {
      \\"test-codepipeline_codepipeline-assume-role-policy_AB972C21\\": {
        \\"statement\\": [
          {
            \\"actions\\": [
              \\"sts:AssumeRole\\"
            ],
            \\"effect\\": \\"Allow\\",
            \\"principals\\": [
              {
                \\"identifiers\\": [
                  \\"codepipeline.amazonaws.com\\"
                ],
                \\"type\\": \\"Service\\"
              }
            ]
          }
        ],
        \\"//\\": {
          \\"metadata\\": {
            \\"path\\": \\"test/test-codepipeline/codepipeline-assume-role-policy\\",
            \\"uniqueId\\": \\"test-codepipeline_codepipeline-assume-role-policy_AB972C21\\"
          }
        }
      },
      \\"test-codepipeline_codepipeline-role-policy-document_DD4EB3DB\\": {
        \\"statement\\": [
          {
            \\"actions\\": [
              \\"codestar-connections:UseConnection\\"
            ],
            \\"effect\\": \\"Allow\\",
            \\"resources\\": [
              \\"arn:codestart-connection:*\\"
            ]
          },
          {
            \\"actions\\": [
              \\"codebuild:BatchGetBuilds\\",
              \\"codebuild:StartBuild\\",
              \\"codebuild:BatchGetBuildBatches\\",
              \\"codebuild:StartBuildBatch\\"
            ],
            \\"effect\\": \\"Allow\\",
            \\"resources\\": [
              \\"arn:aws:codebuild:*:*:project/Test-Env\\"
            ]
          },
          {
            \\"actions\\": [
              \\"codedeploy:CreateDeployment\\",
              \\"codedeploy:GetApplication\\",
              \\"codedeploy:GetApplicationRevision\\",
              \\"codedeploy:GetDeployment\\",
              \\"codedeploy:RegisterApplicationRevision\\",
              \\"codedeploy:GetDeploymentConfig\\"
            ],
            \\"effect\\": \\"Allow\\",
            \\"resources\\": [
              \\"arn:aws:codedeploy:*:*:application:Test-Env-ECS\\",
              \\"arn:aws:codedeploy:*:*:deploymentgroup:Test-Env-ECS/Test-Env-ECS\\",
              \\"arn:aws:codedeploy:*:*:deploymentconfig:*\\"
            ]
          },
          {
            \\"actions\\": [
              \\"s3:GetObject\\",
              \\"s3:GetObjectVersion\\",
              \\"s3:GetBucketVersioning\\",
              \\"s3:PutObjectAcl\\",
              \\"s3:PutObject\\"
            ],
            \\"effect\\": \\"Allow\\",
            \\"resources\\": [
              \\"\${aws_s3_bucket.test-codepipeline_codepipeline-bucket_D4671464.arn}\\",
              \\"\${aws_s3_bucket.test-codepipeline_codepipeline-bucket_D4671464.arn}/*\\"
            ]
          },
          {
            \\"actions\\": [
              \\"iam:PassRole\\"
            ],
            \\"effect\\": \\"Allow\\",
            \\"resources\\": [
              \\"*\\"
            ],
            \\"condition\\": [
              {
                \\"test\\": \\"StringEqualsIfExists\\",
                \\"values\\": [
                  \\"ecs-tasks.amazonaws.com\\"
                ],
                \\"variable\\": \\"iam:PassedToService\\"
              }
            ]
          },
          {
            \\"actions\\": [
              \\"ecs:RegisterTaskDefinition\\"
            ],
            \\"effect\\": \\"Allow\\",
            \\"resources\\": [
              \\"*\\"
            ]
          }
        ],
        \\"//\\": {
          \\"metadata\\": {
            \\"path\\": \\"test/test-codepipeline/codepipeline-role-policy-document\\",
            \\"uniqueId\\": \\"test-codepipeline_codepipeline-role-policy-document_DD4EB3DB\\"
          }
        }
      }
    },
    \\"aws_kms_alias\\": {
      \\"test-codepipeline_kms_s3_alias_6C922DC1\\": {
        \\"name\\": \\"alias/aws/s3\\",
        \\"//\\": {
          \\"metadata\\": {
            \\"path\\": \\"test/test-codepipeline/kms_s3_alias\\",
            \\"uniqueId\\": \\"test-codepipeline_kms_s3_alias_6C922DC1\\"
          }
        }
      }
    }
  },
  \\"resource\\": {
    \\"aws_iam_role\\": {
      \\"test-codepipeline_codepipeline-role_4D3D2364\\": {
        \\"assume_role_policy\\": \\"\${data.aws_iam_policy_document.test-codepipeline_codepipeline-assume-role-policy_AB972C21.json}\\",
        \\"name\\": \\"Test-Env-CodePipelineRole\\",
        \\"//\\": {
          \\"metadata\\": {
            \\"path\\": \\"test/test-codepipeline/codepipeline-role\\",
            \\"uniqueId\\": \\"test-codepipeline_codepipeline-role_4D3D2364\\"
          }
        }
      }
    },
    \\"aws_s3_bucket\\": {
      \\"test-codepipeline_codepipeline-bucket_D4671464\\": {
        \\"acl\\": \\"private\\",
        \\"bucket\\": \\"pocket-codepipeline-e7e6d80d49c8787d2f7a7aca123082dd\\",
        \\"force_destroy\\": true,
        \\"//\\": {
          \\"metadata\\": {
            \\"path\\": \\"test/test-codepipeline/codepipeline-bucket\\",
            \\"uniqueId\\": \\"test-codepipeline_codepipeline-bucket_D4671464\\"
          }
        }
      }
    },
    \\"aws_iam_role_policy\\": {
      \\"test-codepipeline_codepipeline-role-policy_76FC5FBB\\": {
        \\"name\\": \\"Test-Env-CodePipeline-Role-Policy\\",
        \\"policy\\": \\"\${data.aws_iam_policy_document.test-codepipeline_codepipeline-role-policy-document_DD4EB3DB.json}\\",
        \\"role\\": \\"\${aws_iam_role.test-codepipeline_codepipeline-role_4D3D2364.id}\\",
        \\"//\\": {
          \\"metadata\\": {
            \\"path\\": \\"test/test-codepipeline/codepipeline-role-policy\\",
            \\"uniqueId\\": \\"test-codepipeline_codepipeline-role-policy_76FC5FBB\\"
          }
        }
      }
    },
    \\"aws_codepipeline\\": {
      \\"test-codepipeline_367BF1E2\\": {
        \\"name\\": \\"Test-Env-CodePipeline\\",
        \\"role_arn\\": \\"\${aws_iam_role.test-codepipeline_codepipeline-role_4D3D2364.arn}\\",
        \\"artifact_store\\": [
          {
            \\"location\\": \\"\${aws_s3_bucket.test-codepipeline_codepipeline-bucket_D4671464.bucket}\\",
            \\"type\\": \\"S3\\",
            \\"encryption_key\\": [
              {
                \\"id\\": \\"\${data.aws_kms_alias.test-codepipeline_kms_s3_alias_6C922DC1.arn}\\",
                \\"type\\": \\"KMS\\"
              }
            ]
          }
        ],
        \\"stage\\": [
          {
            \\"name\\": \\"Source\\",
            \\"action\\": [
              {
                \\"category\\": \\"Source\\",
                \\"configuration\\": {
                  \\"ConnectionArn\\": \\"arn:codestart-connection:*\\",
                  \\"FullRepositoryId\\": \\"string\\",
                  \\"BranchName\\": \\"test\\",
                  \\"DetectChanges\\": \\"false\\"
                },
                \\"name\\": \\"GitHub_Checkout\\",
                \\"namespace\\": \\"SourceVariables\\",
                \\"output_artifacts\\": [
                  \\"SourceOutput\\"
                ],
                \\"owner\\": \\"AWS\\",
                \\"provider\\": \\"CodeStarSourceConnection\\",
                \\"version\\": \\"1\\"
              }
            ]
          },
          {
            \\"name\\": \\"Deploy\\",
            \\"action\\": [
              {
                \\"category\\": \\"Build\\",
                \\"configuration\\": {
                  \\"ProjectName\\": \\"Test-Env\\",
                  \\"EnvironmentVariables\\": \\"[{\\\\\\"name\\\\\\":\\\\\\"GIT_BRANCH\\\\\\",\\\\\\"value\\\\\\":\\\\\\"#{SourceVariables.BranchName}\\\\\\"}]\\"
                },
                \\"input_artifacts\\": [
                  \\"SourceOutput\\"
                ],
                \\"name\\": \\"CodeBuild\\",
                \\"output_artifacts\\": [
                  \\"CodeBuildOutput\\"
                ],
                \\"owner\\": \\"AWS\\",
                \\"provider\\": \\"CodeBuild\\",
                \\"run_order\\": 1,
                \\"version\\": \\"1\\"
              },
              {
                \\"category\\": \\"Deploy\\",
                \\"configuration\\": {
                  \\"ApplicationName\\": \\"Test-Env-ECS\\",
                  \\"DeploymentGroupName\\": \\"Test-Env-ECS\\",
                  \\"TaskDefinitionTemplateArtifact\\": \\"CodeBuildOutput\\",
                  \\"TaskDefinitionTemplatePath\\": \\"taskdef.json\\",
                  \\"AppSpecTemplateArtifact\\": \\"CodeBuildOutput\\",
                  \\"AppSpecTemplatePath\\": \\"appspec.json\\"
                },
                \\"input_artifacts\\": [
                  \\"CodeBuildOutput\\"
                ],
                \\"name\\": \\"Deploy_ECS\\",
                \\"owner\\": \\"AWS\\",
                \\"provider\\": \\"CodeDeployToECS\\",
                \\"run_order\\": 2,
                \\"version\\": \\"1\\"
              }
            ]
          }
        ],
        \\"//\\": {
          \\"metadata\\": {
            \\"path\\": \\"test/test-codepipeline/codepipeline\\",
            \\"uniqueId\\": \\"test-codepipeline_367BF1E2\\"
          }
        }
      }
    }
  }
}"
`;

exports[`renders a Pocket ECS Codepipeline template with tags 1`] = `
"{
  \\"//\\": {
    \\"metadata\\": {
      \\"version\\": \\"stubbed\\",
      \\"stackName\\": \\"test\\",
      \\"backend\\": \\"local\\"
    }
  },
  \\"data\\": {
    \\"aws_iam_policy_document\\": {
      \\"test-codepipeline_codepipeline-assume-role-policy_AB972C21\\": {
        \\"statement\\": [
          {
            \\"actions\\": [
              \\"sts:AssumeRole\\"
            ],
            \\"effect\\": \\"Allow\\",
            \\"principals\\": [
              {
                \\"identifiers\\": [
                  \\"codepipeline.amazonaws.com\\"
                ],
                \\"type\\": \\"Service\\"
              }
            ]
          }
        ],
        \\"//\\": {
          \\"metadata\\": {
            \\"path\\": \\"test/test-codepipeline/codepipeline-assume-role-policy\\",
            \\"uniqueId\\": \\"test-codepipeline_codepipeline-assume-role-policy_AB972C21\\"
          }
        }
      },
      \\"test-codepipeline_codepipeline-role-policy-document_DD4EB3DB\\": {
        \\"statement\\": [
          {
            \\"actions\\": [
              \\"codestar-connections:UseConnection\\"
            ],
            \\"effect\\": \\"Allow\\",
            \\"resources\\": [
              \\"arn:codestart-connection:*\\"
            ]
          },
          {
            \\"actions\\": [
              \\"codebuild:BatchGetBuilds\\",
              \\"codebuild:StartBuild\\",
              \\"codebuild:BatchGetBuildBatches\\",
              \\"codebuild:StartBuildBatch\\"
            ],
            \\"effect\\": \\"Allow\\",
            \\"resources\\": [
              \\"arn:aws:codebuild:*:*:project/Test-Env\\"
            ]
          },
          {
            \\"actions\\": [
              \\"codedeploy:CreateDeployment\\",
              \\"codedeploy:GetApplication\\",
              \\"codedeploy:GetApplicationRevision\\",
              \\"codedeploy:GetDeployment\\",
              \\"codedeploy:RegisterApplicationRevision\\",
              \\"codedeploy:GetDeploymentConfig\\"
            ],
            \\"effect\\": \\"Allow\\",
            \\"resources\\": [
              \\"arn:aws:codedeploy:*:*:application:Test-Env-ECS\\",
              \\"arn:aws:codedeploy:*:*:deploymentgroup:Test-Env-ECS/Test-Env-ECS\\",
              \\"arn:aws:codedeploy:*:*:deploymentconfig:*\\"
            ]
          },
          {
            \\"actions\\": [
              \\"s3:GetObject\\",
              \\"s3:GetObjectVersion\\",
              \\"s3:GetBucketVersioning\\",
              \\"s3:PutObjectAcl\\",
              \\"s3:PutObject\\"
            ],
            \\"effect\\": \\"Allow\\",
            \\"resources\\": [
              \\"\${aws_s3_bucket.test-codepipeline_codepipeline-bucket_D4671464.arn}\\",
              \\"\${aws_s3_bucket.test-codepipeline_codepipeline-bucket_D4671464.arn}/*\\"
            ]
          },
          {
            \\"actions\\": [
              \\"iam:PassRole\\"
            ],
            \\"effect\\": \\"Allow\\",
            \\"resources\\": [
              \\"*\\"
            ],
            \\"condition\\": [
              {
                \\"test\\": \\"StringEqualsIfExists\\",
                \\"values\\": [
                  \\"ecs-tasks.amazonaws.com\\"
                ],
                \\"variable\\": \\"iam:PassedToService\\"
              }
            ]
          },
          {
            \\"actions\\": [
              \\"ecs:RegisterTaskDefinition\\"
            ],
            \\"effect\\": \\"Allow\\",
            \\"resources\\": [
              \\"*\\"
            ]
          }
        ],
        \\"//\\": {
          \\"metadata\\": {
            \\"path\\": \\"test/test-codepipeline/codepipeline-role-policy-document\\",
            \\"uniqueId\\": \\"test-codepipeline_codepipeline-role-policy-document_DD4EB3DB\\"
          }
        }
      }
    },
    \\"aws_kms_alias\\": {
      \\"test-codepipeline_kms_s3_alias_6C922DC1\\": {
        \\"name\\": \\"alias/aws/s3\\",
        \\"//\\": {
          \\"metadata\\": {
            \\"path\\": \\"test/test-codepipeline/kms_s3_alias\\",
            \\"uniqueId\\": \\"test-codepipeline_kms_s3_alias_6C922DC1\\"
          }
        }
      }
    }
  },
  \\"resource\\": {
    \\"aws_iam_role\\": {
      \\"test-codepipeline_codepipeline-role_4D3D2364\\": {
        \\"assume_role_policy\\": \\"\${data.aws_iam_policy_document.test-codepipeline_codepipeline-assume-role-policy_AB972C21.json}\\",
        \\"name\\": \\"Test-Env-CodePipelineRole\\",
        \\"//\\": {
          \\"metadata\\": {
            \\"path\\": \\"test/test-codepipeline/codepipeline-role\\",
            \\"uniqueId\\": \\"test-codepipeline_codepipeline-role_4D3D2364\\"
          }
        }
      }
    },
    \\"aws_s3_bucket\\": {
      \\"test-codepipeline_codepipeline-bucket_D4671464\\": {
        \\"acl\\": \\"private\\",
        \\"bucket\\": \\"pocket-codepipeline-e7e6d80d49c8787d2f7a7aca123082dd\\",
        \\"force_destroy\\": true,
        \\"tags\\": {
          \\"yup\\": \\"a tag\\"
        },
        \\"//\\": {
          \\"metadata\\": {
            \\"path\\": \\"test/test-codepipeline/codepipeline-bucket\\",
            \\"uniqueId\\": \\"test-codepipeline_codepipeline-bucket_D4671464\\"
          }
        }
      }
    },
    \\"aws_iam_role_policy\\": {
      \\"test-codepipeline_codepipeline-role-policy_76FC5FBB\\": {
        \\"name\\": \\"Test-Env-CodePipeline-Role-Policy\\",
        \\"policy\\": \\"\${data.aws_iam_policy_document.test-codepipeline_codepipeline-role-policy-document_DD4EB3DB.json}\\",
        \\"role\\": \\"\${aws_iam_role.test-codepipeline_codepipeline-role_4D3D2364.id}\\",
        \\"//\\": {
          \\"metadata\\": {
            \\"path\\": \\"test/test-codepipeline/codepipeline-role-policy\\",
            \\"uniqueId\\": \\"test-codepipeline_codepipeline-role-policy_76FC5FBB\\"
          }
        }
      }
    },
    \\"aws_codepipeline\\": {
      \\"test-codepipeline_367BF1E2\\": {
        \\"name\\": \\"Test-Env-CodePipeline\\",
        \\"role_arn\\": \\"\${aws_iam_role.test-codepipeline_codepipeline-role_4D3D2364.arn}\\",
        \\"tags\\": {
          \\"yup\\": \\"a tag\\"
        },
        \\"artifact_store\\": [
          {
            \\"location\\": \\"\${aws_s3_bucket.test-codepipeline_codepipeline-bucket_D4671464.bucket}\\",
            \\"type\\": \\"S3\\",
            \\"encryption_key\\": [
              {
                \\"id\\": \\"\${data.aws_kms_alias.test-codepipeline_kms_s3_alias_6C922DC1.arn}\\",
                \\"type\\": \\"KMS\\"
              }
            ]
          }
        ],
        \\"stage\\": [
          {
            \\"name\\": \\"Source\\",
            \\"action\\": [
              {
                \\"category\\": \\"Source\\",
                \\"configuration\\": {
                  \\"ConnectionArn\\": \\"arn:codestart-connection:*\\",
                  \\"FullRepositoryId\\": \\"string\\",
                  \\"BranchName\\": \\"test\\",
                  \\"DetectChanges\\": \\"false\\"
                },
                \\"name\\": \\"GitHub_Checkout\\",
                \\"namespace\\": \\"SourceVariables\\",
                \\"output_artifacts\\": [
                  \\"SourceOutput\\"
                ],
                \\"owner\\": \\"AWS\\",
                \\"provider\\": \\"CodeStarSourceConnection\\",
                \\"version\\": \\"1\\"
              }
            ]
          },
          {
            \\"name\\": \\"Deploy\\",
            \\"action\\": [
              {
                \\"category\\": \\"Build\\",
                \\"configuration\\": {
                  \\"ProjectName\\": \\"Test-Env\\",
                  \\"EnvironmentVariables\\": \\"[{\\\\\\"name\\\\\\":\\\\\\"GIT_BRANCH\\\\\\",\\\\\\"value\\\\\\":\\\\\\"#{SourceVariables.BranchName}\\\\\\"}]\\"
                },
                \\"input_artifacts\\": [
                  \\"SourceOutput\\"
                ],
                \\"name\\": \\"CodeBuild\\",
                \\"output_artifacts\\": [
                  \\"CodeBuildOutput\\"
                ],
                \\"owner\\": \\"AWS\\",
                \\"provider\\": \\"CodeBuild\\",
                \\"run_order\\": 1,
                \\"version\\": \\"1\\"
              },
              {
                \\"category\\": \\"Deploy\\",
                \\"configuration\\": {
                  \\"ApplicationName\\": \\"Test-Env-ECS\\",
                  \\"DeploymentGroupName\\": \\"Test-Env-ECS\\",
                  \\"TaskDefinitionTemplateArtifact\\": \\"CodeBuildOutput\\",
                  \\"TaskDefinitionTemplatePath\\": \\"taskdef.json\\",
                  \\"AppSpecTemplateArtifact\\": \\"CodeBuildOutput\\",
                  \\"AppSpecTemplatePath\\": \\"appspec.json\\"
                },
                \\"input_artifacts\\": [
                  \\"CodeBuildOutput\\"
                ],
                \\"name\\": \\"Deploy_ECS\\",
                \\"owner\\": \\"AWS\\",
                \\"provider\\": \\"CodeDeployToECS\\",
                \\"run_order\\": 2,
                \\"version\\": \\"1\\"
              }
            ]
          }
        ],
        \\"//\\": {
          \\"metadata\\": {
            \\"path\\": \\"test/test-codepipeline/codepipeline\\",
            \\"uniqueId\\": \\"test-codepipeline_367BF1E2\\"
          }
        }
      }
    }
  }
}"
`;

exports[`renders a Pocket ECS Codepipeline template with the provided CodeDeploy app name 1`] = `
"{
  \\"//\\": {
    \\"metadata\\": {
      \\"version\\": \\"stubbed\\",
      \\"stackName\\": \\"test\\",
      \\"backend\\": \\"local\\"
    }
  },
  \\"data\\": {
    \\"aws_iam_policy_document\\": {
      \\"test-codepipeline_codepipeline-assume-role-policy_AB972C21\\": {
        \\"statement\\": [
          {
            \\"actions\\": [
              \\"sts:AssumeRole\\"
            ],
            \\"effect\\": \\"Allow\\",
            \\"principals\\": [
              {
                \\"identifiers\\": [
                  \\"codepipeline.amazonaws.com\\"
                ],
                \\"type\\": \\"Service\\"
              }
            ]
          }
        ],
        \\"//\\": {
          \\"metadata\\": {
            \\"path\\": \\"test/test-codepipeline/codepipeline-assume-role-policy\\",
            \\"uniqueId\\": \\"test-codepipeline_codepipeline-assume-role-policy_AB972C21\\"
          }
        }
      },
      \\"test-codepipeline_codepipeline-role-policy-document_DD4EB3DB\\": {
        \\"statement\\": [
          {
            \\"actions\\": [
              \\"codestar-connections:UseConnection\\"
            ],
            \\"effect\\": \\"Allow\\",
            \\"resources\\": [
              \\"arn:codestart-connection:*\\"
            ]
          },
          {
            \\"actions\\": [
              \\"codebuild:BatchGetBuilds\\",
              \\"codebuild:StartBuild\\",
              \\"codebuild:BatchGetBuildBatches\\",
              \\"codebuild:StartBuildBatch\\"
            ],
            \\"effect\\": \\"Allow\\",
            \\"resources\\": [
              \\"arn:aws:codebuild:*:*:project/Test-Env\\"
            ]
          },
          {
            \\"actions\\": [
              \\"codedeploy:CreateDeployment\\",
              \\"codedeploy:GetApplication\\",
              \\"codedeploy:GetApplicationRevision\\",
              \\"codedeploy:GetDeployment\\",
              \\"codedeploy:RegisterApplicationRevision\\",
              \\"codedeploy:GetDeploymentConfig\\"
            ],
            \\"effect\\": \\"Allow\\",
            \\"resources\\": [
              \\"arn:aws:codedeploy:*:*:application:TestAppName\\",
              \\"arn:aws:codedeploy:*:*:deploymentgroup:TestAppName/Test-Env-ECS\\",
              \\"arn:aws:codedeploy:*:*:deploymentconfig:*\\"
            ]
          },
          {
            \\"actions\\": [
              \\"s3:GetObject\\",
              \\"s3:GetObjectVersion\\",
              \\"s3:GetBucketVersioning\\",
              \\"s3:PutObjectAcl\\",
              \\"s3:PutObject\\"
            ],
            \\"effect\\": \\"Allow\\",
            \\"resources\\": [
              \\"\${aws_s3_bucket.test-codepipeline_codepipeline-bucket_D4671464.arn}\\",
              \\"\${aws_s3_bucket.test-codepipeline_codepipeline-bucket_D4671464.arn}/*\\"
            ]
          },
          {
            \\"actions\\": [
              \\"iam:PassRole\\"
            ],
            \\"effect\\": \\"Allow\\",
            \\"resources\\": [
              \\"*\\"
            ],
            \\"condition\\": [
              {
                \\"test\\": \\"StringEqualsIfExists\\",
                \\"values\\": [
                  \\"ecs-tasks.amazonaws.com\\"
                ],
                \\"variable\\": \\"iam:PassedToService\\"
              }
            ]
          },
          {
            \\"actions\\": [
              \\"ecs:RegisterTaskDefinition\\"
            ],
            \\"effect\\": \\"Allow\\",
            \\"resources\\": [
              \\"*\\"
            ]
          }
        ],
        \\"//\\": {
          \\"metadata\\": {
            \\"path\\": \\"test/test-codepipeline/codepipeline-role-policy-document\\",
            \\"uniqueId\\": \\"test-codepipeline_codepipeline-role-policy-document_DD4EB3DB\\"
          }
        }
      }
    },
    \\"aws_kms_alias\\": {
      \\"test-codepipeline_kms_s3_alias_6C922DC1\\": {
        \\"name\\": \\"alias/aws/s3\\",
        \\"//\\": {
          \\"metadata\\": {
            \\"path\\": \\"test/test-codepipeline/kms_s3_alias\\",
            \\"uniqueId\\": \\"test-codepipeline_kms_s3_alias_6C922DC1\\"
          }
        }
      }
    }
  },
  \\"resource\\": {
    \\"aws_iam_role\\": {
      \\"test-codepipeline_codepipeline-role_4D3D2364\\": {
        \\"assume_role_policy\\": \\"\${data.aws_iam_policy_document.test-codepipeline_codepipeline-assume-role-policy_AB972C21.json}\\",
        \\"name\\": \\"Test-Env-CodePipelineRole\\",
        \\"//\\": {
          \\"metadata\\": {
            \\"path\\": \\"test/test-codepipeline/codepipeline-role\\",
            \\"uniqueId\\": \\"test-codepipeline_codepipeline-role_4D3D2364\\"
          }
        }
      }
    },
    \\"aws_s3_bucket\\": {
      \\"test-codepipeline_codepipeline-bucket_D4671464\\": {
        \\"acl\\": \\"private\\",
        \\"bucket\\": \\"pocket-codepipeline-e7e6d80d49c8787d2f7a7aca123082dd\\",
        \\"force_destroy\\": true,
        \\"//\\": {
          \\"metadata\\": {
            \\"path\\": \\"test/test-codepipeline/codepipeline-bucket\\",
            \\"uniqueId\\": \\"test-codepipeline_codepipeline-bucket_D4671464\\"
          }
        }
      }
    },
    \\"aws_iam_role_policy\\": {
      \\"test-codepipeline_codepipeline-role-policy_76FC5FBB\\": {
        \\"name\\": \\"Test-Env-CodePipeline-Role-Policy\\",
        \\"policy\\": \\"\${data.aws_iam_policy_document.test-codepipeline_codepipeline-role-policy-document_DD4EB3DB.json}\\",
        \\"role\\": \\"\${aws_iam_role.test-codepipeline_codepipeline-role_4D3D2364.id}\\",
        \\"//\\": {
          \\"metadata\\": {
            \\"path\\": \\"test/test-codepipeline/codepipeline-role-policy\\",
            \\"uniqueId\\": \\"test-codepipeline_codepipeline-role-policy_76FC5FBB\\"
          }
        }
      }
    },
    \\"aws_codepipeline\\": {
      \\"test-codepipeline_367BF1E2\\": {
        \\"name\\": \\"Test-Env-CodePipeline\\",
        \\"role_arn\\": \\"\${aws_iam_role.test-codepipeline_codepipeline-role_4D3D2364.arn}\\",
        \\"artifact_store\\": [
          {
            \\"location\\": \\"\${aws_s3_bucket.test-codepipeline_codepipeline-bucket_D4671464.bucket}\\",
            \\"type\\": \\"S3\\",
            \\"encryption_key\\": [
              {
                \\"id\\": \\"\${data.aws_kms_alias.test-codepipeline_kms_s3_alias_6C922DC1.arn}\\",
                \\"type\\": \\"KMS\\"
              }
            ]
          }
        ],
        \\"stage\\": [
          {
            \\"name\\": \\"Source\\",
            \\"action\\": [
              {
                \\"category\\": \\"Source\\",
                \\"configuration\\": {
                  \\"ConnectionArn\\": \\"arn:codestart-connection:*\\",
                  \\"FullRepositoryId\\": \\"string\\",
                  \\"BranchName\\": \\"test\\",
                  \\"DetectChanges\\": \\"false\\"
                },
                \\"name\\": \\"GitHub_Checkout\\",
                \\"namespace\\": \\"SourceVariables\\",
                \\"output_artifacts\\": [
                  \\"SourceOutput\\"
                ],
                \\"owner\\": \\"AWS\\",
                \\"provider\\": \\"CodeStarSourceConnection\\",
                \\"version\\": \\"1\\"
              }
            ]
          },
          {
            \\"name\\": \\"Deploy\\",
            \\"action\\": [
              {
                \\"category\\": \\"Build\\",
                \\"configuration\\": {
                  \\"ProjectName\\": \\"Test-Env\\",
                  \\"EnvironmentVariables\\": \\"[{\\\\\\"name\\\\\\":\\\\\\"GIT_BRANCH\\\\\\",\\\\\\"value\\\\\\":\\\\\\"#{SourceVariables.BranchName}\\\\\\"}]\\"
                },
                \\"input_artifacts\\": [
                  \\"SourceOutput\\"
                ],
                \\"name\\": \\"CodeBuild\\",
                \\"output_artifacts\\": [
                  \\"CodeBuildOutput\\"
                ],
                \\"owner\\": \\"AWS\\",
                \\"provider\\": \\"CodeBuild\\",
                \\"run_order\\": 1,
                \\"version\\": \\"1\\"
              },
              {
                \\"category\\": \\"Deploy\\",
                \\"configuration\\": {
                  \\"ApplicationName\\": \\"TestAppName\\",
                  \\"DeploymentGroupName\\": \\"Test-Env-ECS\\",
                  \\"TaskDefinitionTemplateArtifact\\": \\"CodeBuildOutput\\",
                  \\"TaskDefinitionTemplatePath\\": \\"taskdef.json\\",
                  \\"AppSpecTemplateArtifact\\": \\"CodeBuildOutput\\",
                  \\"AppSpecTemplatePath\\": \\"appspec.json\\"
                },
                \\"input_artifacts\\": [
                  \\"CodeBuildOutput\\"
                ],
                \\"name\\": \\"Deploy_ECS\\",
                \\"owner\\": \\"AWS\\",
                \\"provider\\": \\"CodeDeployToECS\\",
                \\"run_order\\": 2,
                \\"version\\": \\"1\\"
              }
            ]
          }
        ],
        \\"//\\": {
          \\"metadata\\": {
            \\"path\\": \\"test/test-codepipeline/codepipeline\\",
            \\"uniqueId\\": \\"test-codepipeline_367BF1E2\\"
          }
        }
      }
    }
  }
}"
`;

exports[`renders a Pocket ECS Codepipeline template with the provided CodeDeploy deployment group name 1`] = `
"{
  \\"//\\": {
    \\"metadata\\": {
      \\"version\\": \\"stubbed\\",
      \\"stackName\\": \\"test\\",
      \\"backend\\": \\"local\\"
    }
  },
  \\"data\\": {
    \\"aws_iam_policy_document\\": {
      \\"test-codepipeline_codepipeline-assume-role-policy_AB972C21\\": {
        \\"statement\\": [
          {
            \\"actions\\": [
              \\"sts:AssumeRole\\"
            ],
            \\"effect\\": \\"Allow\\",
            \\"principals\\": [
              {
                \\"identifiers\\": [
                  \\"codepipeline.amazonaws.com\\"
                ],
                \\"type\\": \\"Service\\"
              }
            ]
          }
        ],
        \\"//\\": {
          \\"metadata\\": {
            \\"path\\": \\"test/test-codepipeline/codepipeline-assume-role-policy\\",
            \\"uniqueId\\": \\"test-codepipeline_codepipeline-assume-role-policy_AB972C21\\"
          }
        }
      },
      \\"test-codepipeline_codepipeline-role-policy-document_DD4EB3DB\\": {
        \\"statement\\": [
          {
            \\"actions\\": [
              \\"codestar-connections:UseConnection\\"
            ],
            \\"effect\\": \\"Allow\\",
            \\"resources\\": [
              \\"arn:codestart-connection:*\\"
            ]
          },
          {
            \\"actions\\": [
              \\"codebuild:BatchGetBuilds\\",
              \\"codebuild:StartBuild\\",
              \\"codebuild:BatchGetBuildBatches\\",
              \\"codebuild:StartBuildBatch\\"
            ],
            \\"effect\\": \\"Allow\\",
            \\"resources\\": [
              \\"arn:aws:codebuild:*:*:project/Test-Env\\"
            ]
          },
          {
            \\"actions\\": [
              \\"codedeploy:CreateDeployment\\",
              \\"codedeploy:GetApplication\\",
              \\"codedeploy:GetApplicationRevision\\",
              \\"codedeploy:GetDeployment\\",
              \\"codedeploy:RegisterApplicationRevision\\",
              \\"codedeploy:GetDeploymentConfig\\"
            ],
            \\"effect\\": \\"Allow\\",
            \\"resources\\": [
              \\"arn:aws:codedeploy:*:*:application:Test-Env-ECS\\",
              \\"arn:aws:codedeploy:*:*:deploymentgroup:Test-Env-ECS/TestDeploymentGroupName\\",
              \\"arn:aws:codedeploy:*:*:deploymentconfig:*\\"
            ]
          },
          {
            \\"actions\\": [
              \\"s3:GetObject\\",
              \\"s3:GetObjectVersion\\",
              \\"s3:GetBucketVersioning\\",
              \\"s3:PutObjectAcl\\",
              \\"s3:PutObject\\"
            ],
            \\"effect\\": \\"Allow\\",
            \\"resources\\": [
              \\"\${aws_s3_bucket.test-codepipeline_codepipeline-bucket_D4671464.arn}\\",
              \\"\${aws_s3_bucket.test-codepipeline_codepipeline-bucket_D4671464.arn}/*\\"
            ]
          },
          {
            \\"actions\\": [
              \\"iam:PassRole\\"
            ],
            \\"effect\\": \\"Allow\\",
            \\"resources\\": [
              \\"*\\"
            ],
            \\"condition\\": [
              {
                \\"test\\": \\"StringEqualsIfExists\\",
                \\"values\\": [
                  \\"ecs-tasks.amazonaws.com\\"
                ],
                \\"variable\\": \\"iam:PassedToService\\"
              }
            ]
          },
          {
            \\"actions\\": [
              \\"ecs:RegisterTaskDefinition\\"
            ],
            \\"effect\\": \\"Allow\\",
            \\"resources\\": [
              \\"*\\"
            ]
          }
        ],
        \\"//\\": {
          \\"metadata\\": {
            \\"path\\": \\"test/test-codepipeline/codepipeline-role-policy-document\\",
            \\"uniqueId\\": \\"test-codepipeline_codepipeline-role-policy-document_DD4EB3DB\\"
          }
        }
      }
    },
    \\"aws_kms_alias\\": {
      \\"test-codepipeline_kms_s3_alias_6C922DC1\\": {
        \\"name\\": \\"alias/aws/s3\\",
        \\"//\\": {
          \\"metadata\\": {
            \\"path\\": \\"test/test-codepipeline/kms_s3_alias\\",
            \\"uniqueId\\": \\"test-codepipeline_kms_s3_alias_6C922DC1\\"
          }
        }
      }
    }
  },
  \\"resource\\": {
    \\"aws_iam_role\\": {
      \\"test-codepipeline_codepipeline-role_4D3D2364\\": {
        \\"assume_role_policy\\": \\"\${data.aws_iam_policy_document.test-codepipeline_codepipeline-assume-role-policy_AB972C21.json}\\",
        \\"name\\": \\"Test-Env-CodePipelineRole\\",
        \\"//\\": {
          \\"metadata\\": {
            \\"path\\": \\"test/test-codepipeline/codepipeline-role\\",
            \\"uniqueId\\": \\"test-codepipeline_codepipeline-role_4D3D2364\\"
          }
        }
      }
    },
    \\"aws_s3_bucket\\": {
      \\"test-codepipeline_codepipeline-bucket_D4671464\\": {
        \\"acl\\": \\"private\\",
        \\"bucket\\": \\"pocket-codepipeline-e7e6d80d49c8787d2f7a7aca123082dd\\",
        \\"force_destroy\\": true,
        \\"//\\": {
          \\"metadata\\": {
            \\"path\\": \\"test/test-codepipeline/codepipeline-bucket\\",
            \\"uniqueId\\": \\"test-codepipeline_codepipeline-bucket_D4671464\\"
          }
        }
      }
    },
    \\"aws_iam_role_policy\\": {
      \\"test-codepipeline_codepipeline-role-policy_76FC5FBB\\": {
        \\"name\\": \\"Test-Env-CodePipeline-Role-Policy\\",
        \\"policy\\": \\"\${data.aws_iam_policy_document.test-codepipeline_codepipeline-role-policy-document_DD4EB3DB.json}\\",
        \\"role\\": \\"\${aws_iam_role.test-codepipeline_codepipeline-role_4D3D2364.id}\\",
        \\"//\\": {
          \\"metadata\\": {
            \\"path\\": \\"test/test-codepipeline/codepipeline-role-policy\\",
            \\"uniqueId\\": \\"test-codepipeline_codepipeline-role-policy_76FC5FBB\\"
          }
        }
      }
    },
    \\"aws_codepipeline\\": {
      \\"test-codepipeline_367BF1E2\\": {
        \\"name\\": \\"Test-Env-CodePipeline\\",
        \\"role_arn\\": \\"\${aws_iam_role.test-codepipeline_codepipeline-role_4D3D2364.arn}\\",
        \\"artifact_store\\": [
          {
            \\"location\\": \\"\${aws_s3_bucket.test-codepipeline_codepipeline-bucket_D4671464.bucket}\\",
            \\"type\\": \\"S3\\",
            \\"encryption_key\\": [
              {
                \\"id\\": \\"\${data.aws_kms_alias.test-codepipeline_kms_s3_alias_6C922DC1.arn}\\",
                \\"type\\": \\"KMS\\"
              }
            ]
          }
        ],
        \\"stage\\": [
          {
            \\"name\\": \\"Source\\",
            \\"action\\": [
              {
                \\"category\\": \\"Source\\",
                \\"configuration\\": {
                  \\"ConnectionArn\\": \\"arn:codestart-connection:*\\",
                  \\"FullRepositoryId\\": \\"string\\",
                  \\"BranchName\\": \\"test\\",
                  \\"DetectChanges\\": \\"false\\"
                },
                \\"name\\": \\"GitHub_Checkout\\",
                \\"namespace\\": \\"SourceVariables\\",
                \\"output_artifacts\\": [
                  \\"SourceOutput\\"
                ],
                \\"owner\\": \\"AWS\\",
                \\"provider\\": \\"CodeStarSourceConnection\\",
                \\"version\\": \\"1\\"
              }
            ]
          },
          {
            \\"name\\": \\"Deploy\\",
            \\"action\\": [
              {
                \\"category\\": \\"Build\\",
                \\"configuration\\": {
                  \\"ProjectName\\": \\"Test-Env\\",
                  \\"EnvironmentVariables\\": \\"[{\\\\\\"name\\\\\\":\\\\\\"GIT_BRANCH\\\\\\",\\\\\\"value\\\\\\":\\\\\\"#{SourceVariables.BranchName}\\\\\\"}]\\"
                },
                \\"input_artifacts\\": [
                  \\"SourceOutput\\"
                ],
                \\"name\\": \\"CodeBuild\\",
                \\"output_artifacts\\": [
                  \\"CodeBuildOutput\\"
                ],
                \\"owner\\": \\"AWS\\",
                \\"provider\\": \\"CodeBuild\\",
                \\"run_order\\": 1,
                \\"version\\": \\"1\\"
              },
              {
                \\"category\\": \\"Deploy\\",
                \\"configuration\\": {
                  \\"ApplicationName\\": \\"Test-Env-ECS\\",
                  \\"DeploymentGroupName\\": \\"TestDeploymentGroupName\\",
                  \\"TaskDefinitionTemplateArtifact\\": \\"CodeBuildOutput\\",
                  \\"TaskDefinitionTemplatePath\\": \\"taskdef.json\\",
                  \\"AppSpecTemplateArtifact\\": \\"CodeBuildOutput\\",
                  \\"AppSpecTemplatePath\\": \\"appspec.json\\"
                },
                \\"input_artifacts\\": [
                  \\"CodeBuildOutput\\"
                ],
                \\"name\\": \\"Deploy_ECS\\",
                \\"owner\\": \\"AWS\\",
                \\"provider\\": \\"CodeDeployToECS\\",
                \\"run_order\\": 2,
                \\"version\\": \\"1\\"
              }
            ]
          }
        ],
        \\"//\\": {
          \\"metadata\\": {
            \\"path\\": \\"test/test-codepipeline/codepipeline\\",
            \\"uniqueId\\": \\"test-codepipeline_367BF1E2\\"
          }
        }
      }
    }
  }
}"
`;

exports[`renders a Pocket ECS Codepipeline template with the provided appspec path 1`] = `
"{
  \\"//\\": {
    \\"metadata\\": {
      \\"version\\": \\"stubbed\\",
      \\"stackName\\": \\"test\\",
      \\"backend\\": \\"local\\"
    }
  },
  \\"data\\": {
    \\"aws_iam_policy_document\\": {
      \\"test-codepipeline_codepipeline-assume-role-policy_AB972C21\\": {
        \\"statement\\": [
          {
            \\"actions\\": [
              \\"sts:AssumeRole\\"
            ],
            \\"effect\\": \\"Allow\\",
            \\"principals\\": [
              {
                \\"identifiers\\": [
                  \\"codepipeline.amazonaws.com\\"
                ],
                \\"type\\": \\"Service\\"
              }
            ]
          }
        ],
        \\"//\\": {
          \\"metadata\\": {
            \\"path\\": \\"test/test-codepipeline/codepipeline-assume-role-policy\\",
            \\"uniqueId\\": \\"test-codepipeline_codepipeline-assume-role-policy_AB972C21\\"
          }
        }
      },
      \\"test-codepipeline_codepipeline-role-policy-document_DD4EB3DB\\": {
        \\"statement\\": [
          {
            \\"actions\\": [
              \\"codestar-connections:UseConnection\\"
            ],
            \\"effect\\": \\"Allow\\",
            \\"resources\\": [
              \\"arn:codestart-connection:*\\"
            ]
          },
          {
            \\"actions\\": [
              \\"codebuild:BatchGetBuilds\\",
              \\"codebuild:StartBuild\\",
              \\"codebuild:BatchGetBuildBatches\\",
              \\"codebuild:StartBuildBatch\\"
            ],
            \\"effect\\": \\"Allow\\",
            \\"resources\\": [
              \\"arn:aws:codebuild:*:*:project/Test-Env\\"
            ]
          },
          {
            \\"actions\\": [
              \\"codedeploy:CreateDeployment\\",
              \\"codedeploy:GetApplication\\",
              \\"codedeploy:GetApplicationRevision\\",
              \\"codedeploy:GetDeployment\\",
              \\"codedeploy:RegisterApplicationRevision\\",
              \\"codedeploy:GetDeploymentConfig\\"
            ],
            \\"effect\\": \\"Allow\\",
            \\"resources\\": [
              \\"arn:aws:codedeploy:*:*:application:Test-Env-ECS\\",
              \\"arn:aws:codedeploy:*:*:deploymentgroup:Test-Env-ECS/Test-Env-ECS\\",
              \\"arn:aws:codedeploy:*:*:deploymentconfig:*\\"
            ]
          },
          {
            \\"actions\\": [
              \\"s3:GetObject\\",
              \\"s3:GetObjectVersion\\",
              \\"s3:GetBucketVersioning\\",
              \\"s3:PutObjectAcl\\",
              \\"s3:PutObject\\"
            ],
            \\"effect\\": \\"Allow\\",
            \\"resources\\": [
              \\"\${aws_s3_bucket.test-codepipeline_codepipeline-bucket_D4671464.arn}\\",
              \\"\${aws_s3_bucket.test-codepipeline_codepipeline-bucket_D4671464.arn}/*\\"
            ]
          },
          {
            \\"actions\\": [
              \\"iam:PassRole\\"
            ],
            \\"effect\\": \\"Allow\\",
            \\"resources\\": [
              \\"*\\"
            ],
            \\"condition\\": [
              {
                \\"test\\": \\"StringEqualsIfExists\\",
                \\"values\\": [
                  \\"ecs-tasks.amazonaws.com\\"
                ],
                \\"variable\\": \\"iam:PassedToService\\"
              }
            ]
          },
          {
            \\"actions\\": [
              \\"ecs:RegisterTaskDefinition\\"
            ],
            \\"effect\\": \\"Allow\\",
            \\"resources\\": [
              \\"*\\"
            ]
          }
        ],
        \\"//\\": {
          \\"metadata\\": {
            \\"path\\": \\"test/test-codepipeline/codepipeline-role-policy-document\\",
            \\"uniqueId\\": \\"test-codepipeline_codepipeline-role-policy-document_DD4EB3DB\\"
          }
        }
      }
    },
    \\"aws_kms_alias\\": {
      \\"test-codepipeline_kms_s3_alias_6C922DC1\\": {
        \\"name\\": \\"alias/aws/s3\\",
        \\"//\\": {
          \\"metadata\\": {
            \\"path\\": \\"test/test-codepipeline/kms_s3_alias\\",
            \\"uniqueId\\": \\"test-codepipeline_kms_s3_alias_6C922DC1\\"
          }
        }
      }
    }
  },
  \\"resource\\": {
    \\"aws_iam_role\\": {
      \\"test-codepipeline_codepipeline-role_4D3D2364\\": {
        \\"assume_role_policy\\": \\"\${data.aws_iam_policy_document.test-codepipeline_codepipeline-assume-role-policy_AB972C21.json}\\",
        \\"name\\": \\"Test-Env-CodePipelineRole\\",
        \\"//\\": {
          \\"metadata\\": {
            \\"path\\": \\"test/test-codepipeline/codepipeline-role\\",
            \\"uniqueId\\": \\"test-codepipeline_codepipeline-role_4D3D2364\\"
          }
        }
      }
    },
    \\"aws_s3_bucket\\": {
      \\"test-codepipeline_codepipeline-bucket_D4671464\\": {
        \\"acl\\": \\"private\\",
        \\"bucket\\": \\"pocket-codepipeline-e7e6d80d49c8787d2f7a7aca123082dd\\",
        \\"force_destroy\\": true,
        \\"//\\": {
          \\"metadata\\": {
            \\"path\\": \\"test/test-codepipeline/codepipeline-bucket\\",
            \\"uniqueId\\": \\"test-codepipeline_codepipeline-bucket_D4671464\\"
          }
        }
      }
    },
    \\"aws_iam_role_policy\\": {
      \\"test-codepipeline_codepipeline-role-policy_76FC5FBB\\": {
        \\"name\\": \\"Test-Env-CodePipeline-Role-Policy\\",
        \\"policy\\": \\"\${data.aws_iam_policy_document.test-codepipeline_codepipeline-role-policy-document_DD4EB3DB.json}\\",
        \\"role\\": \\"\${aws_iam_role.test-codepipeline_codepipeline-role_4D3D2364.id}\\",
        \\"//\\": {
          \\"metadata\\": {
            \\"path\\": \\"test/test-codepipeline/codepipeline-role-policy\\",
            \\"uniqueId\\": \\"test-codepipeline_codepipeline-role-policy_76FC5FBB\\"
          }
        }
      }
    },
    \\"aws_codepipeline\\": {
      \\"test-codepipeline_367BF1E2\\": {
        \\"name\\": \\"Test-Env-CodePipeline\\",
        \\"role_arn\\": \\"\${aws_iam_role.test-codepipeline_codepipeline-role_4D3D2364.arn}\\",
        \\"artifact_store\\": [
          {
            \\"location\\": \\"\${aws_s3_bucket.test-codepipeline_codepipeline-bucket_D4671464.bucket}\\",
            \\"type\\": \\"S3\\",
            \\"encryption_key\\": [
              {
                \\"id\\": \\"\${data.aws_kms_alias.test-codepipeline_kms_s3_alias_6C922DC1.arn}\\",
                \\"type\\": \\"KMS\\"
              }
            ]
          }
        ],
        \\"stage\\": [
          {
            \\"name\\": \\"Source\\",
            \\"action\\": [
              {
                \\"category\\": \\"Source\\",
                \\"configuration\\": {
                  \\"ConnectionArn\\": \\"arn:codestart-connection:*\\",
                  \\"FullRepositoryId\\": \\"string\\",
                  \\"BranchName\\": \\"test\\",
                  \\"DetectChanges\\": \\"false\\"
                },
                \\"name\\": \\"GitHub_Checkout\\",
                \\"namespace\\": \\"SourceVariables\\",
                \\"output_artifacts\\": [
                  \\"SourceOutput\\"
                ],
                \\"owner\\": \\"AWS\\",
                \\"provider\\": \\"CodeStarSourceConnection\\",
                \\"version\\": \\"1\\"
              }
            ]
          },
          {
            \\"name\\": \\"Deploy\\",
            \\"action\\": [
              {
                \\"category\\": \\"Build\\",
                \\"configuration\\": {
                  \\"ProjectName\\": \\"Test-Env\\",
                  \\"EnvironmentVariables\\": \\"[{\\\\\\"name\\\\\\":\\\\\\"GIT_BRANCH\\\\\\",\\\\\\"value\\\\\\":\\\\\\"#{SourceVariables.BranchName}\\\\\\"}]\\"
                },
                \\"input_artifacts\\": [
                  \\"SourceOutput\\"
                ],
                \\"name\\": \\"CodeBuild\\",
                \\"output_artifacts\\": [
                  \\"CodeBuildOutput\\"
                ],
                \\"owner\\": \\"AWS\\",
                \\"provider\\": \\"CodeBuild\\",
                \\"run_order\\": 1,
                \\"version\\": \\"1\\"
              },
              {
                \\"category\\": \\"Deploy\\",
                \\"configuration\\": {
                  \\"ApplicationName\\": \\"Test-Env-ECS\\",
                  \\"DeploymentGroupName\\": \\"Test-Env-ECS\\",
                  \\"TaskDefinitionTemplateArtifact\\": \\"CodeBuildOutput\\",
                  \\"TaskDefinitionTemplatePath\\": \\"taskdef.json\\",
                  \\"AppSpecTemplateArtifact\\": \\"CodeBuildOutput\\",
                  \\"AppSpecTemplatePath\\": \\"testappspec.json\\"
                },
                \\"input_artifacts\\": [
                  \\"CodeBuildOutput\\"
                ],
                \\"name\\": \\"Deploy_ECS\\",
                \\"owner\\": \\"AWS\\",
                \\"provider\\": \\"CodeDeployToECS\\",
                \\"run_order\\": 2,
                \\"version\\": \\"1\\"
              }
            ]
          }
        ],
        \\"//\\": {
          \\"metadata\\": {
            \\"path\\": \\"test/test-codepipeline/codepipeline\\",
            \\"uniqueId\\": \\"test-codepipeline_367BF1E2\\"
          }
        }
      }
    }
  }
}"
`;

exports[`renders a Pocket ECS Codepipeline template with the provided code build project name 1`] = `
"{
  \\"//\\": {
    \\"metadata\\": {
      \\"version\\": \\"stubbed\\",
      \\"stackName\\": \\"test\\",
      \\"backend\\": \\"local\\"
    }
  },
  \\"data\\": {
    \\"aws_iam_policy_document\\": {
      \\"test-codepipeline_codepipeline-assume-role-policy_AB972C21\\": {
        \\"statement\\": [
          {
            \\"actions\\": [
              \\"sts:AssumeRole\\"
            ],
            \\"effect\\": \\"Allow\\",
            \\"principals\\": [
              {
                \\"identifiers\\": [
                  \\"codepipeline.amazonaws.com\\"
                ],
                \\"type\\": \\"Service\\"
              }
            ]
          }
        ],
        \\"//\\": {
          \\"metadata\\": {
            \\"path\\": \\"test/test-codepipeline/codepipeline-assume-role-policy\\",
            \\"uniqueId\\": \\"test-codepipeline_codepipeline-assume-role-policy_AB972C21\\"
          }
        }
      },
      \\"test-codepipeline_codepipeline-role-policy-document_DD4EB3DB\\": {
        \\"statement\\": [
          {
            \\"actions\\": [
              \\"codestar-connections:UseConnection\\"
            ],
            \\"effect\\": \\"Allow\\",
            \\"resources\\": [
              \\"arn:codestart-connection:*\\"
            ]
          },
          {
            \\"actions\\": [
              \\"codebuild:BatchGetBuilds\\",
              \\"codebuild:StartBuild\\",
              \\"codebuild:BatchGetBuildBatches\\",
              \\"codebuild:StartBuildBatch\\"
            ],
            \\"effect\\": \\"Allow\\",
            \\"resources\\": [
              \\"arn:aws:codebuild:*:*:project/TestBuildName\\"
            ]
          },
          {
            \\"actions\\": [
              \\"codedeploy:CreateDeployment\\",
              \\"codedeploy:GetApplication\\",
              \\"codedeploy:GetApplicationRevision\\",
              \\"codedeploy:GetDeployment\\",
              \\"codedeploy:RegisterApplicationRevision\\",
              \\"codedeploy:GetDeploymentConfig\\"
            ],
            \\"effect\\": \\"Allow\\",
            \\"resources\\": [
              \\"arn:aws:codedeploy:*:*:application:Test-Env-ECS\\",
              \\"arn:aws:codedeploy:*:*:deploymentgroup:Test-Env-ECS/Test-Env-ECS\\",
              \\"arn:aws:codedeploy:*:*:deploymentconfig:*\\"
            ]
          },
          {
            \\"actions\\": [
              \\"s3:GetObject\\",
              \\"s3:GetObjectVersion\\",
              \\"s3:GetBucketVersioning\\",
              \\"s3:PutObjectAcl\\",
              \\"s3:PutObject\\"
            ],
            \\"effect\\": \\"Allow\\",
            \\"resources\\": [
              \\"\${aws_s3_bucket.test-codepipeline_codepipeline-bucket_D4671464.arn}\\",
              \\"\${aws_s3_bucket.test-codepipeline_codepipeline-bucket_D4671464.arn}/*\\"
            ]
          },
          {
            \\"actions\\": [
              \\"iam:PassRole\\"
            ],
            \\"effect\\": \\"Allow\\",
            \\"resources\\": [
              \\"*\\"
            ],
            \\"condition\\": [
              {
                \\"test\\": \\"StringEqualsIfExists\\",
                \\"values\\": [
                  \\"ecs-tasks.amazonaws.com\\"
                ],
                \\"variable\\": \\"iam:PassedToService\\"
              }
            ]
          },
          {
            \\"actions\\": [
              \\"ecs:RegisterTaskDefinition\\"
            ],
            \\"effect\\": \\"Allow\\",
            \\"resources\\": [
              \\"*\\"
            ]
          }
        ],
        \\"//\\": {
          \\"metadata\\": {
            \\"path\\": \\"test/test-codepipeline/codepipeline-role-policy-document\\",
            \\"uniqueId\\": \\"test-codepipeline_codepipeline-role-policy-document_DD4EB3DB\\"
          }
        }
      }
    },
    \\"aws_kms_alias\\": {
      \\"test-codepipeline_kms_s3_alias_6C922DC1\\": {
        \\"name\\": \\"alias/aws/s3\\",
        \\"//\\": {
          \\"metadata\\": {
            \\"path\\": \\"test/test-codepipeline/kms_s3_alias\\",
            \\"uniqueId\\": \\"test-codepipeline_kms_s3_alias_6C922DC1\\"
          }
        }
      }
    }
  },
  \\"resource\\": {
    \\"aws_iam_role\\": {
      \\"test-codepipeline_codepipeline-role_4D3D2364\\": {
        \\"assume_role_policy\\": \\"\${data.aws_iam_policy_document.test-codepipeline_codepipeline-assume-role-policy_AB972C21.json}\\",
        \\"name\\": \\"Test-Env-CodePipelineRole\\",
        \\"//\\": {
          \\"metadata\\": {
            \\"path\\": \\"test/test-codepipeline/codepipeline-role\\",
            \\"uniqueId\\": \\"test-codepipeline_codepipeline-role_4D3D2364\\"
          }
        }
      }
    },
    \\"aws_s3_bucket\\": {
      \\"test-codepipeline_codepipeline-bucket_D4671464\\": {
        \\"acl\\": \\"private\\",
        \\"bucket\\": \\"pocket-codepipeline-e7e6d80d49c8787d2f7a7aca123082dd\\",
        \\"force_destroy\\": true,
        \\"//\\": {
          \\"metadata\\": {
            \\"path\\": \\"test/test-codepipeline/codepipeline-bucket\\",
            \\"uniqueId\\": \\"test-codepipeline_codepipeline-bucket_D4671464\\"
          }
        }
      }
    },
    \\"aws_iam_role_policy\\": {
      \\"test-codepipeline_codepipeline-role-policy_76FC5FBB\\": {
        \\"name\\": \\"Test-Env-CodePipeline-Role-Policy\\",
        \\"policy\\": \\"\${data.aws_iam_policy_document.test-codepipeline_codepipeline-role-policy-document_DD4EB3DB.json}\\",
        \\"role\\": \\"\${aws_iam_role.test-codepipeline_codepipeline-role_4D3D2364.id}\\",
        \\"//\\": {
          \\"metadata\\": {
            \\"path\\": \\"test/test-codepipeline/codepipeline-role-policy\\",
            \\"uniqueId\\": \\"test-codepipeline_codepipeline-role-policy_76FC5FBB\\"
          }
        }
      }
    },
    \\"aws_codepipeline\\": {
      \\"test-codepipeline_367BF1E2\\": {
        \\"name\\": \\"Test-Env-CodePipeline\\",
        \\"role_arn\\": \\"\${aws_iam_role.test-codepipeline_codepipeline-role_4D3D2364.arn}\\",
        \\"artifact_store\\": [
          {
            \\"location\\": \\"\${aws_s3_bucket.test-codepipeline_codepipeline-bucket_D4671464.bucket}\\",
            \\"type\\": \\"S3\\",
            \\"encryption_key\\": [
              {
                \\"id\\": \\"\${data.aws_kms_alias.test-codepipeline_kms_s3_alias_6C922DC1.arn}\\",
                \\"type\\": \\"KMS\\"
              }
            ]
          }
        ],
        \\"stage\\": [
          {
            \\"name\\": \\"Source\\",
            \\"action\\": [
              {
                \\"category\\": \\"Source\\",
                \\"configuration\\": {
                  \\"ConnectionArn\\": \\"arn:codestart-connection:*\\",
                  \\"FullRepositoryId\\": \\"string\\",
                  \\"BranchName\\": \\"test\\",
                  \\"DetectChanges\\": \\"false\\"
                },
                \\"name\\": \\"GitHub_Checkout\\",
                \\"namespace\\": \\"SourceVariables\\",
                \\"output_artifacts\\": [
                  \\"SourceOutput\\"
                ],
                \\"owner\\": \\"AWS\\",
                \\"provider\\": \\"CodeStarSourceConnection\\",
                \\"version\\": \\"1\\"
              }
            ]
          },
          {
            \\"name\\": \\"Deploy\\",
            \\"action\\": [
              {
                \\"category\\": \\"Build\\",
                \\"configuration\\": {
                  \\"ProjectName\\": \\"TestBuildName\\",
                  \\"EnvironmentVariables\\": \\"[{\\\\\\"name\\\\\\":\\\\\\"GIT_BRANCH\\\\\\",\\\\\\"value\\\\\\":\\\\\\"#{SourceVariables.BranchName}\\\\\\"}]\\"
                },
                \\"input_artifacts\\": [
                  \\"SourceOutput\\"
                ],
                \\"name\\": \\"CodeBuild\\",
                \\"output_artifacts\\": [
                  \\"CodeBuildOutput\\"
                ],
                \\"owner\\": \\"AWS\\",
                \\"provider\\": \\"CodeBuild\\",
                \\"run_order\\": 1,
                \\"version\\": \\"1\\"
              },
              {
                \\"category\\": \\"Deploy\\",
                \\"configuration\\": {
                  \\"ApplicationName\\": \\"Test-Env-ECS\\",
                  \\"DeploymentGroupName\\": \\"Test-Env-ECS\\",
                  \\"TaskDefinitionTemplateArtifact\\": \\"CodeBuildOutput\\",
                  \\"TaskDefinitionTemplatePath\\": \\"taskdef.json\\",
                  \\"AppSpecTemplateArtifact\\": \\"CodeBuildOutput\\",
                  \\"AppSpecTemplatePath\\": \\"appspec.json\\"
                },
                \\"input_artifacts\\": [
                  \\"CodeBuildOutput\\"
                ],
                \\"name\\": \\"Deploy_ECS\\",
                \\"owner\\": \\"AWS\\",
                \\"provider\\": \\"CodeDeployToECS\\",
                \\"run_order\\": 2,
                \\"version\\": \\"1\\"
              }
            ]
          }
        ],
        \\"//\\": {
          \\"metadata\\": {
            \\"path\\": \\"test/test-codepipeline/codepipeline\\",
            \\"uniqueId\\": \\"test-codepipeline_367BF1E2\\"
          }
        }
      }
    }
  }
}"
`;

exports[`renders a Pocket ECS Codepipeline template with the provided taskdef path 1`] = `
"{
  \\"//\\": {
    \\"metadata\\": {
      \\"version\\": \\"stubbed\\",
      \\"stackName\\": \\"test\\",
      \\"backend\\": \\"local\\"
    }
  },
  \\"data\\": {
    \\"aws_iam_policy_document\\": {
      \\"test-codepipeline_codepipeline-assume-role-policy_AB972C21\\": {
        \\"statement\\": [
          {
            \\"actions\\": [
              \\"sts:AssumeRole\\"
            ],
            \\"effect\\": \\"Allow\\",
            \\"principals\\": [
              {
                \\"identifiers\\": [
                  \\"codepipeline.amazonaws.com\\"
                ],
                \\"type\\": \\"Service\\"
              }
            ]
          }
        ],
        \\"//\\": {
          \\"metadata\\": {
            \\"path\\": \\"test/test-codepipeline/codepipeline-assume-role-policy\\",
            \\"uniqueId\\": \\"test-codepipeline_codepipeline-assume-role-policy_AB972C21\\"
          }
        }
      },
      \\"test-codepipeline_codepipeline-role-policy-document_DD4EB3DB\\": {
        \\"statement\\": [
          {
            \\"actions\\": [
              \\"codestar-connections:UseConnection\\"
            ],
            \\"effect\\": \\"Allow\\",
            \\"resources\\": [
              \\"arn:codestart-connection:*\\"
            ]
          },
          {
            \\"actions\\": [
              \\"codebuild:BatchGetBuilds\\",
              \\"codebuild:StartBuild\\",
              \\"codebuild:BatchGetBuildBatches\\",
              \\"codebuild:StartBuildBatch\\"
            ],
            \\"effect\\": \\"Allow\\",
            \\"resources\\": [
              \\"arn:aws:codebuild:*:*:project/Test-Env\\"
            ]
          },
          {
            \\"actions\\": [
              \\"codedeploy:CreateDeployment\\",
              \\"codedeploy:GetApplication\\",
              \\"codedeploy:GetApplicationRevision\\",
              \\"codedeploy:GetDeployment\\",
              \\"codedeploy:RegisterApplicationRevision\\",
              \\"codedeploy:GetDeploymentConfig\\"
            ],
            \\"effect\\": \\"Allow\\",
            \\"resources\\": [
              \\"arn:aws:codedeploy:*:*:application:Test-Env-ECS\\",
              \\"arn:aws:codedeploy:*:*:deploymentgroup:Test-Env-ECS/Test-Env-ECS\\",
              \\"arn:aws:codedeploy:*:*:deploymentconfig:*\\"
            ]
          },
          {
            \\"actions\\": [
              \\"s3:GetObject\\",
              \\"s3:GetObjectVersion\\",
              \\"s3:GetBucketVersioning\\",
              \\"s3:PutObjectAcl\\",
              \\"s3:PutObject\\"
            ],
            \\"effect\\": \\"Allow\\",
            \\"resources\\": [
              \\"\${aws_s3_bucket.test-codepipeline_codepipeline-bucket_D4671464.arn}\\",
              \\"\${aws_s3_bucket.test-codepipeline_codepipeline-bucket_D4671464.arn}/*\\"
            ]
          },
          {
            \\"actions\\": [
              \\"iam:PassRole\\"
            ],
            \\"effect\\": \\"Allow\\",
            \\"resources\\": [
              \\"*\\"
            ],
            \\"condition\\": [
              {
                \\"test\\": \\"StringEqualsIfExists\\",
                \\"values\\": [
                  \\"ecs-tasks.amazonaws.com\\"
                ],
                \\"variable\\": \\"iam:PassedToService\\"
              }
            ]
          },
          {
            \\"actions\\": [
              \\"ecs:RegisterTaskDefinition\\"
            ],
            \\"effect\\": \\"Allow\\",
            \\"resources\\": [
              \\"*\\"
            ]
          }
        ],
        \\"//\\": {
          \\"metadata\\": {
            \\"path\\": \\"test/test-codepipeline/codepipeline-role-policy-document\\",
            \\"uniqueId\\": \\"test-codepipeline_codepipeline-role-policy-document_DD4EB3DB\\"
          }
        }
      }
    },
    \\"aws_kms_alias\\": {
      \\"test-codepipeline_kms_s3_alias_6C922DC1\\": {
        \\"name\\": \\"alias/aws/s3\\",
        \\"//\\": {
          \\"metadata\\": {
            \\"path\\": \\"test/test-codepipeline/kms_s3_alias\\",
            \\"uniqueId\\": \\"test-codepipeline_kms_s3_alias_6C922DC1\\"
          }
        }
      }
    }
  },
  \\"resource\\": {
    \\"aws_iam_role\\": {
      \\"test-codepipeline_codepipeline-role_4D3D2364\\": {
        \\"assume_role_policy\\": \\"\${data.aws_iam_policy_document.test-codepipeline_codepipeline-assume-role-policy_AB972C21.json}\\",
        \\"name\\": \\"Test-Env-CodePipelineRole\\",
        \\"//\\": {
          \\"metadata\\": {
            \\"path\\": \\"test/test-codepipeline/codepipeline-role\\",
            \\"uniqueId\\": \\"test-codepipeline_codepipeline-role_4D3D2364\\"
          }
        }
      }
    },
    \\"aws_s3_bucket\\": {
      \\"test-codepipeline_codepipeline-bucket_D4671464\\": {
        \\"acl\\": \\"private\\",
        \\"bucket\\": \\"pocket-codepipeline-e7e6d80d49c8787d2f7a7aca123082dd\\",
        \\"force_destroy\\": true,
        \\"//\\": {
          \\"metadata\\": {
            \\"path\\": \\"test/test-codepipeline/codepipeline-bucket\\",
            \\"uniqueId\\": \\"test-codepipeline_codepipeline-bucket_D4671464\\"
          }
        }
      }
    },
    \\"aws_iam_role_policy\\": {
      \\"test-codepipeline_codepipeline-role-policy_76FC5FBB\\": {
        \\"name\\": \\"Test-Env-CodePipeline-Role-Policy\\",
        \\"policy\\": \\"\${data.aws_iam_policy_document.test-codepipeline_codepipeline-role-policy-document_DD4EB3DB.json}\\",
        \\"role\\": \\"\${aws_iam_role.test-codepipeline_codepipeline-role_4D3D2364.id}\\",
        \\"//\\": {
          \\"metadata\\": {
            \\"path\\": \\"test/test-codepipeline/codepipeline-role-policy\\",
            \\"uniqueId\\": \\"test-codepipeline_codepipeline-role-policy_76FC5FBB\\"
          }
        }
      }
    },
    \\"aws_codepipeline\\": {
      \\"test-codepipeline_367BF1E2\\": {
        \\"name\\": \\"Test-Env-CodePipeline\\",
        \\"role_arn\\": \\"\${aws_iam_role.test-codepipeline_codepipeline-role_4D3D2364.arn}\\",
        \\"artifact_store\\": [
          {
            \\"location\\": \\"\${aws_s3_bucket.test-codepipeline_codepipeline-bucket_D4671464.bucket}\\",
            \\"type\\": \\"S3\\",
            \\"encryption_key\\": [
              {
                \\"id\\": \\"\${data.aws_kms_alias.test-codepipeline_kms_s3_alias_6C922DC1.arn}\\",
                \\"type\\": \\"KMS\\"
              }
            ]
          }
        ],
        \\"stage\\": [
          {
            \\"name\\": \\"Source\\",
            \\"action\\": [
              {
                \\"category\\": \\"Source\\",
                \\"configuration\\": {
                  \\"ConnectionArn\\": \\"arn:codestart-connection:*\\",
                  \\"FullRepositoryId\\": \\"string\\",
                  \\"BranchName\\": \\"test\\",
                  \\"DetectChanges\\": \\"false\\"
                },
                \\"name\\": \\"GitHub_Checkout\\",
                \\"namespace\\": \\"SourceVariables\\",
                \\"output_artifacts\\": [
                  \\"SourceOutput\\"
                ],
                \\"owner\\": \\"AWS\\",
                \\"provider\\": \\"CodeStarSourceConnection\\",
                \\"version\\": \\"1\\"
              }
            ]
          },
          {
            \\"name\\": \\"Deploy\\",
            \\"action\\": [
              {
                \\"category\\": \\"Build\\",
                \\"configuration\\": {
                  \\"ProjectName\\": \\"Test-Env\\",
                  \\"EnvironmentVariables\\": \\"[{\\\\\\"name\\\\\\":\\\\\\"GIT_BRANCH\\\\\\",\\\\\\"value\\\\\\":\\\\\\"#{SourceVariables.BranchName}\\\\\\"}]\\"
                },
                \\"input_artifacts\\": [
                  \\"SourceOutput\\"
                ],
                \\"name\\": \\"CodeBuild\\",
                \\"output_artifacts\\": [
                  \\"CodeBuildOutput\\"
                ],
                \\"owner\\": \\"AWS\\",
                \\"provider\\": \\"CodeBuild\\",
                \\"run_order\\": 1,
                \\"version\\": \\"1\\"
              },
              {
                \\"category\\": \\"Deploy\\",
                \\"configuration\\": {
                  \\"ApplicationName\\": \\"Test-Env-ECS\\",
                  \\"DeploymentGroupName\\": \\"Test-Env-ECS\\",
                  \\"TaskDefinitionTemplateArtifact\\": \\"CodeBuildOutput\\",
                  \\"TaskDefinitionTemplatePath\\": \\"testtaskdef.json\\",
                  \\"AppSpecTemplateArtifact\\": \\"CodeBuildOutput\\",
                  \\"AppSpecTemplatePath\\": \\"appspec.json\\"
                },
                \\"input_artifacts\\": [
                  \\"CodeBuildOutput\\"
                ],
                \\"name\\": \\"Deploy_ECS\\",
                \\"owner\\": \\"AWS\\",
                \\"provider\\": \\"CodeDeployToECS\\",
                \\"run_order\\": 2,
                \\"version\\": \\"1\\"
              }
            ]
          }
        ],
        \\"//\\": {
          \\"metadata\\": {
            \\"path\\": \\"test/test-codepipeline/codepipeline\\",
            \\"uniqueId\\": \\"test-codepipeline_367BF1E2\\"
          }
        }
      }
    }
  }
}"
`;
